aggiunta seconda parte di html/css

--- a/index.html
+++ b/index.html
@@ -35,6 +35,39 @@
             </div>
         </form>
     </div>
+    <div class="biglietto">
+        <h1 class="text-center">il tuo biglietto</h1>
+        <div class="container">
+            <h3>Dettaglio passeggero</h3>
+            <table>
+                <thead>
+                    <tr>
+                        <td>Nome Passeggero</td>
+                        <td>Offerta</td>
+                        <td>Carrozza</td>
+                        <td>Codice CP</td>
+                        <td>Costo biglietto</td>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td id="nomePasseggero">asdfs</td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td id="etàPasseggero">sasdf</td>
+                        <td>7</td>
+                        <td id="codiceCP">asdf</td>
+                        <td id="costoBiglietto">dsaf</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
     <!-- <script type="text/javascript" src="myscript.js"></script> -->
 </body>
 </html>
