--- a/index.html
+++ b/index.html
@@ -5,24 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <script type="text/javascript" src="myscript.js"></script>
     <title>Biglietto Treno</title>
 </head>
 <body>
     <h1 class="text-center">Calcola il prezzo del tuo biglietto</h1>
     <div class="container">
-        <form action="">
+        <form action="" id="myForm">
             <div class="flexbox upper">
                 <div class="field">
                     <p class="text-center">Nome Cognome</p>
-                    <input type="text" name="nome">
+                    <input type="text" name="nome" id="myNome">
                 </div>
                 <div class="field">
                     <p class="text-center">Km da percorrere</p>
-                    <input type="text" name="km">
+                    <input type="text" name="km" id="myKm">
                 </div>
                 <div class="field">
                     <p class="text-center">Fascia d'età</p>
-                    <select name="età" id="">
+                    <select name="età" id="myAge">
                         <option value="minor">Minorenne</option>
                         <option value="adult">Adulto</option>
                         <option value="elder">Over 65</option>
@@ -68,6 +69,5 @@
             </table>
         </div>
     </div>
-    <!-- <script type="text/javascript" src="myscript.js"></script> -->
 </body>
 </html>
