risoluzione problemi input

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 </div>
                 <div class="field">
                     <p class="text-center">Fascia d'età</p>
-                    <select name="età" id="myAge">
+                    <select name="eta" id="myAge">
                         <option value="minor">Minorenne</option>
                         <option value="adult">Adulto</option>
                         <option value="elder">Over 65</option>
@@ -52,7 +52,7 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td id="nomePasseggero">asdfs</td>
+                        <td id="nomePasseggero"></td>
                         <td></td>
                         <td></td>
                         <td></td>
@@ -60,10 +60,10 @@
                     </tr>
                     <tr>
                         <td></td>
-                        <td id="etàPasseggero">sasdf</td>
+                        <td id="etaPasseggero"></td>
                         <td>7</td>
-                        <td id="codiceCP">asdf</td>
-                        <td id="costoBiglietto">dsaf</td>
+                        <td id="codiceCP"></td>
+                        <td id="costoBiglietto"></td>
                     </tr>
                 </tbody>
             </table>
