aggiunta compilazione biglietto

--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
         </form>
     </div>
     <div class="biglietto">
-        <h1 class="text-center">il tuo biglietto</h1>
+        <h1 class="text-center">Il tuo biglietto</h1>
         <div class="container">
-            <h3>Dettaglio passeggero</h3>
+            <h3>Dettaglio passeggeri</h3>
             <table>
                 <thead>
                     <tr>
@@ -61,7 +61,7 @@
                     <tr>
                         <td></td>
                         <td id="etaPasseggero"></td>
-                        <td>7</td>
+                        <td id="carrozza"></td>
                         <td id="codiceCP"></td>
                         <td id="costoBiglietto"></td>
                     </tr>
