--- a/index.html
+++ b/index.html
@@ -9,21 +9,22 @@
     <title>Biglietto Treno</title>
 </head>
 <body>
+    <!-- parte in alto -->
     <h1 class="text-center">Calcola il prezzo del tuo biglietto</h1>
     <div class="container">
         <form action="" id="myForm">
             <div class="flexbox upper">
                 <div class="field">
                     <p class="text-center">Nome Cognome</p>
-                    <input type="text" name="nome" id="myNome">
+                    <input type="text" name="nome">
                 </div>
                 <div class="field">
                     <p class="text-center">Km da percorrere</p>
-                    <input type="text" name="km" id="myKm">
+                    <input type="text" name="km">
                 </div>
                 <div class="field">
                     <p class="text-center">Fascia d'età</p>
-                    <select name="eta" id="myAge">
+                    <select name="eta">
                         <option value="minor">Minorenne</option>
                         <option value="adult">Adulto</option>
                         <option value="elder">Over 65</option>
@@ -36,6 +37,7 @@
             </div>
         </form>
     </div>
+    <!-- parte in basso -->
     <div class="biglietto">
         <h1 class="text-center">Il tuo biglietto</h1>
         <div class="container">
