aggiunta commenti post correzione

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <div class="flexbox upper">
                 <div class="field">
                     <p class="text-center">Nome Cognome</p>
+                    <!-- potevo usare una label al posto della p -->
                     <input type="text" name="nome">
                 </div>
                 <div class="field">
@@ -32,6 +33,7 @@
                 </div>
             </div>
             <div class="flexbox lower">
+                <!-- meglio usare i tag button piuttosto che input (type submit/reset) -->
                 <input type="submit" value="Genera">
                 <input type="reset" value="Annulla">
             </div>
